# Econ-Indicator

./: .gitignore  README.md  pyproject.toml  run-dashboard.cmd  run-engine.cmd  run-engine.ps1
docs/: architecture.md
examples/: xauusd_evidence.json
src/macro_engine/: __init__.py  cli.py  config.py  domain.py  engine.py  live.py  registry.py  scoring.py  web.py
src/macro_engine/assets/: __init__.py  xauusd.json
src/macro_engine/static/: app.js  index.html  styles.css
tests/: test_engine.py
