[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-intelligence-engine"
version = "0.1.0"
description = "Asset-agnostic, auditable macro regime intelligence engine"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
macro-engine = "macro_engine.cli:main"
macro-dashboard = "macro_engine.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
macro_engine = ["assets/*.json", "static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
